--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "serve": "http-server dist"
   }
 }
